docs(forms): improve samples

--- a/docs/guides/forms/FormsGuide.stories.mdx
+++ b/docs/guides/forms/FormsGuide.stories.mdx
@@ -1,9 +1,9 @@
 import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import * as FormSamples from "./FormsSamples";
 
-<Meta title="Guides/Forms/Guide" />
+<Meta title="Guides/Forms/Forms Guide" />
 
-# Forms
+# Forms Guide
 
 Web forms play a crucial role in web applications, as they are the primary form to collect user information.
 By providing a standardised way to capture user input and validate it, we can ensure a consistent user experience across the different applications.
@@ -37,7 +37,7 @@ There are multiple ways to build forms in React, and each one has its pros and c
 
 ### Native form
 
-The simplest way to build a form is by using a native `form`, using the [built-in form validation](https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation#using_built-in_form_validation)
+The simplest way to build a form is by using a native uncontrolled `form`, leveraging the [built-in form validation](https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation#using_built-in_form_validation)
 and reading the results from `FormData`.
 It's a good option for **simple forms** using form components based on native form controls (eg. `input`) where **custom validation is not needed**.
 
