--- a/docs/guides/theming/WhiteLabeling.stories.mdx
+++ b/docs/guides/theming/WhiteLabeling.stories.mdx
@@ -103,8 +103,7 @@ const MyApp = ({ children }) => {
 };
 ```
 
-By customizing the theme variables, the `HvHeader`, `HvButton`, `HvHeaderBrand`, `HvHeaderNavigation`, `HvHeaderMenuIte` and `HvHeaderMenuBarBar`
-components we are able change their default styling to meet the desired UI guidelines.
+By customizing the theme variables, we are able to change the default styling of the HvHeader, HvButton, HvHeaderBrand, HvHeaderNavigation, HvHeaderMenuItem, and HvHeaderMenuBarBar components to meet the desired UI guidelines.
 
 <Unstyled>
   <WhiteLabeling />
