--- a/docs/guides/theming/Theming.stories.mdx
+++ b/docs/guides/theming/Theming.stories.mdx
@@ -6,6 +6,7 @@ import { ThemeStructure } from "./ThemeStructure";
 import { CssVariables } from "./CssVariables";
 import { CreateTheme } from "./CreateTheme";
 import { ThemeContext } from "./ThemeContext";
+import { DefaultProps, DefaultPropsClassOverwrite } from "./DefaultProps";
 
 <Meta title="Guides/Theming" />
 
@@ -18,6 +19,7 @@ Here's what there is to know about the NEXT UI Kit theming:
 - [Theme configuration](#theme-configuration)
 - [Theme context](#theme-context)
 - [CSS variable](#css-variables)
+- [Default props](#default-props)
 - [Spacing](#spacing)
 
 ## Default themes <a id="default-themes" />
@@ -285,7 +287,7 @@ const MyComponent = () => {
 
 ### Access the active theme
 
-If you want to access a property from the theme, you can use the `activeTheme` as shown below.
+If you want to access the theme's colors, you can do as shown below.
 
 ```tsx
 import {
@@ -312,11 +314,11 @@ const newTheme = createTheme({
 });
 
 const MyComponent = () => {
-  const { activeTheme, colors } = useTheme();
+  const { colors } = useTheme();
 
   return (
     <HvTypography style={{ color: colors?.green }}>
-      Hello from the UI Kit team! {activeTheme?.name}
+      Hello from the UI Kit team!
     </HvTypography>
   );
 };
@@ -361,6 +363,79 @@ const MyComponent = () => {
 
 <Story name="Css Variables">
   <CssVariables />
+</Story>
+
+## Default Props <a id="default-props" />
+
+Through our theme it is also possible to change the default props of a component. Let's say for example that the theme you want only uses squared
+shape avatars, you can use this feature to make your life easier by pre defining the default value of the prop `variant` to `square` in the `theme` `components` section like so:
+
+```tsx
+import {
+  createTheme,
+  HvProvider,
+  HvAvatar,
+} from "@hitachivantara/uikit-react-core";
+
+const newTheme = createTheme({
+  name: "myTheme",
+  base: "ds5",
+  components: {
+    HvAvatar: {
+      variant: "square",
+    },
+  },
+});
+
+export const MyApp = () => {
+  return (
+    <HvProvider themes={[newTheme]}>
+      <HvAvatar />
+    </HvProvider>
+  );
+};
+```
+
+<Story name="Default Props">
+  <DefaultProps />
+</Story>
+
+This allows us to not have to declare that property every time we use the component.
+One of the big benefits of this is that most of all of our components have a `classes` prop. This means that we can now customize all
+of the components by overwriting their classes through the theme object.
+
+```tsx
+import {
+  createTheme,
+  HvProvider,
+  HvButton,
+} from "@hitachivantara/uikit-react-core";
+
+const newTheme = createTheme({
+  name: "myTheme",
+  base: "ds5",
+  components: {
+    HvButton: {
+      classes: {
+        primary: {
+          backgroundColor: theme.colors.brand,
+        },
+      },
+    },
+  },
+});
+
+export const MyApp = () => {
+  return (
+    <HvProvider themes={[newTheme]}>
+      <HvButton>Hey</HvButton>
+    </HvProvider>
+  );
+};
+```
+
+<Story name="Default Props Class Overwrite">
+  <DefaultPropsClassOverwrite />
 </Story>
 
 ## Spacing <a id="spacing" />
