--- a/docs/overview/introduction/Introduction.stories.mdx
+++ b/docs/overview/introduction/Introduction.stories.mdx
@@ -41,6 +41,7 @@ NEXT UI Kit resources are distributed across multiple npm packages. This allows 
 - **Lab** - Contributed React components for the NEXT UI Kit.
 - **Viz** - React visualizations for the NEXT Design System.
 - **Code Editor** - React Monaco editor for the NEXT Design System.
+- **UnoCSS Preset** - UnoCSS preset for styling with Utility Classes.
 
 ## Accessibility
 
