--- a/docs/guides/theming/WhiteLabeling.stories.mdx
+++ b/docs/guides/theming/WhiteLabeling.stories.mdx
@@ -103,7 +103,8 @@ const MyApp = ({ children }) => {
 };
 ```
 
-By customizing the theme variables, we are able to change the default styling of the HvHeader, HvButton, HvHeaderBrand, HvHeaderNavigation, HvHeaderMenuItem, and HvHeaderMenuBarBar components to meet the desired UI guidelines.
+By customizing the theme variables, we are able to change the default styling of the `HvHeader`, `HvButton`, `HvHeaderBrand`, `HvHeaderNavigation`,
+`HvHeaderMenuItem`, and `HvHeaderMenuBarBar` components to meet the desired UI guidelines.
 
 <Unstyled>
   <WhiteLabeling />
