docs: fix color migration

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -528,7 +528,7 @@ Colors names have changed in v5.x from previous versions. The table below maps t
 | Semantic    | sema5  | catastrophic |
 | Semantic    | sema7  | neutral_20   |
 | Semantic    | sema8  | positive_20  |
-| Semantic    | sema9  | critical_20  |
+| Semantic    | sema9  | negative_20  |
 | Semantic    | sema20 | warning_20   |
 | Categorical | cviz\* | cat\*        |
 
