chore(docs): add get started page

--- a/docs/overview/GetStarted.stories.mdx
+++ b/docs/overview/GetStarted.stories.mdx
@@ -9,7 +9,7 @@ If you're adding UI Kit to an existing project, follow the [**Manual setup**](#m
 
 ## Automatic setup
 
-NEXT UI Kit offers an interactive command-line tool to easily bootstrap new projects, [**hv-uikit-cli**](https://github.com/lumada-design/hv-uikit-cli/):
+NEXT UI Kit offers an interactive command-line tool to easily bootstrap new projects, [**hv-uikit-cli**](https://github.com/lumada-design/hv-uikit-cli/).
 Follow [this link](https://github.com/lumada-design/hv-uikit-cli/#usage) for usage documentation.
 
 ```sh
@@ -49,7 +49,7 @@ const MyApp = ({ children }) => {
 };
 ```
 
-This will initialize the UI Kit with the `Design System 5`theme and the `dawn` color mode by default. Depending on your design requirements, you may need to customize or use other themes.
+This will initialize the UI Kit with the `Design System 5` theme and the `dawn` color mode by default. Depending on your design requirements, you may need to customize or use other themes.
 
 For more information, please report to the [**provider**](./?path=/docs/guides-provider--docs#provider)
 and [**theming**](./?path=/docs/guides-theming--docs#theming) documentation.
