--- a/apps/docs/pages/docs/overview/get-started.mdx
+++ b/apps/docs/pages/docs/overview/get-started.mdx
@@ -1,1 +1,79 @@
 # Get Started
+
+If you're starting a new project, we recommend you follow the [**Automation setup**](#automatic-setup) instructions.
+If you're adding UI Kit to an existing project, follow the [**Manual setup**](#manual-setup).
+
+## Automatic setup
+
+NEXT UI Kit offers an interactive command-line tool to easily bootstrap new projects, [**hv-uikit-cli**](https://github.com/lumada-design/hv-uikit-cli/).
+Follow [this link](https://github.com/lumada-design/hv-uikit-cli/#usage) for usage documentation.
+
+```sh
+npx @hitachivantara/hv-uikit-cli@latest create
+```
+
+## Manual setup
+
+### Installation
+
+NEXT UI Kit uses [Emotion](https://emotion.sh/) as its default styling engine and [MUI](https://mui.com/) as a core dependency.
+
+To use NEXT UI Kit in your project, run the following command:
+
+```sh
+npm install @hitachivantara/uikit-react-core @emotion/react @emotion/styled @mui/material
+```
+
+`react` and `react-dom` are peer dependencies and must be included in your project. We currently support versions `17.x` and `18.x`.
+
+```sh
+npm install react@18 react-dom@18
+```
+
+### Usage
+
+#### 1. Set up the provider
+
+After installing the core package, you'll need to setup the `HvProvider`, which can be imported from `@hitachivantara/uikit-react-core`,
+and wrap your application with it like so:
+
+```tsx
+import { HvProvider } from "@hitachivantara/uikit-react-core";
+
+const MyApp = ({ children }) => {
+  return <HvProvider>{children}</HvProvider>;
+};
+```
+
+This will initialize the UI Kit with the `Design System 5` theme and the `dawn` color mode by default. Depending on your design requirements, you may need to customize or use other themes.
+
+For more information, please report to the [**provider**](/docs/guides/provider)
+and [**theming**](/docs/guides/theming) documentation.
+
+#### 2. Load the default font
+
+The UI Kit uses **Open Sans** as its default font family since it is the one defined by the Design System specifications. Thus, you'll need to ensure the font
+is loaded properly since the UI Kit can't do it automatically.
+
+This can be achieved through the **Google Web Fonts CDN** by using the following code inside your project's `<head>` tag:
+
+```html
+<link
+  href="https://fonts.googleapis.com/css?family=Open+Sans:400,600"
+  rel="stylesheet"
+/>
+```
+
+Please, report to the [**typography**](/docs/foundation/typography) documentation for more information.
+
+#### 3. Use the components
+
+After setting up the provider and load the font, you can start using the components provided by the UI Kit core package like so:
+
+```tsx
+import { HvTypography } from "@hitachivantara/uikit-react-core";
+
+const MyComponent = () => {
+  return <HvTypography>Hello from the UI Kit team!</HvTypography>;
+};
+```
