chore: restructure nextra content

--- a/apps/docs/pages/docs/introduction.mdx
+++ b/apps/docs/pages/docs/introduction.mdx
@@ -1,4 +1,4 @@
-import Resources from "../../../components/introduction";
+import { Resources } from "../../components/Resources";
 
 # Introduction
 
