chore: nextra live codeblock

--- a/apps/docs/pages/components/button.mdx
+++ b/apps/docs/pages/components/button.mdx
@@ -1,10 +1,12 @@
-import { Button } from "@hitachivantara/uikit-react-core";
-
 # Button
+
+Button component to render button or link
+
+## Usage
 
 ```jsx live
 <>
-  <Button>Primary</Button>
-  <Button variant="secondary">Secondary</Button>
+  <HvButton variant="primarySubtle">Primary</HvButton>
+  <HvButton variant="secondarySubtle">Secondary</HvButton>
 </>
 ```
