--- a/apps/docs/pages/_app.mdx
+++ b/apps/docs/pages/_app.mdx
@@ -1,4 +1,5 @@
-import "../styles/global.css";
+import "../styles.css";
+import "uno.css";
 
 export default function App({ Component, pageProps }) {
   return <Component {...pageProps} />;
