--- a/apps/docs/pages/components/button.mdx
+++ b/apps/docs/pages/components/button.mdx
@@ -4,16 +4,15 @@ import { Layout } from "../../components/Layout"
 
 import { Demo } from "../../components/Demo"
 
-import { Variants } from "../../../../samples/Button/Variants"
-
-import { Icons } from "../../../../samples/Button/Icons"
+import { Variants, Icons } from "../../../../docs/samples/Button"
 
 import { getComponentData } from "apps/docs/utils";
+
 export const getStaticProps = async ({ params }) => {
 
 const meta = await getComponentData("Accordion")
 
-return fs.readFile(`./../../samples/Button/Variants.tsx`, "utf8").then((values) => {
+return fs.readFile(`./../../docs/samples/Button/Variants.tsx`, "utf8").then((values) => {
 return {
 props: {
 ssg: {
