--- a/apps/docs/pages/components/button.mdx
+++ b/apps/docs/pages/components/button.mdx
@@ -4,7 +4,7 @@ import { Layout } from "../../components/Layout"
 
 import { Demo } from "../../components/Demo"
 
-import { Variants, Icons } from "../../../../docs/samples/Button"
+import { Variants, Icons } from "../../../../samples/Button"
 
 import { getComponentData } from "apps/docs/utils";
 
@@ -12,7 +12,7 @@ export const getStaticProps = async ({ params }) => {
 
 const meta = await getComponentData("Accordion")
 
-return fs.readFile(`./../../docs/samples/Button/Variants.tsx`, "utf8").then((values) => {
+return fs.readFile(`./../../samples/Button/Variants.tsx`, "utf8").then((values) => {
 return {
 props: {
 ssg: {
